--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment
 metadata:
   name: webapp-deployment
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: webapp
-  replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
@@ -14,23 +14,22 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: saidiwissem/web-app:latest # Image that will be used to containers in the cluster
+          image: saidiwissem/web-app:latest
           imagePullPolicy: Always
           ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
-
+            - containerPort: 8080
 
 ---
 
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
-  name: webapp-ssvc
+apiVersion: v1
+kind: Service
+metadata:
+  name: webapp-service
 spec:
   selector:
     app: webapp
   ports:
-    - protocol: "TCP"
+    - protocol: TCP
       port: 80
-      targetPort: 8080 
-  type: LoadBalancer # type of the service.
+      targetPort: 8080
+  type: LoadBalancer
