--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=webapp 
-sonar.projectName=webapp 
-sonar.java.binaries=.
+sonar.projectName=webapp
+Dsonar.projectVersion=1.0
+Dsonar.sources=. \
